--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "version": "1.2.3",
     "dependencies": {
         "busboy": "^0.2.9",
+        "fdfs": "^1.0.4",
         "fs-extra": "^0.11.0",
+        "node-fetch": "^1.7.3",
         "node-snowflake": "0.0.1",
-        "qn": "^1.3.0",
-        "fdfs": "^1.0.4"
+        "qn": "^1.3.0"
     },
     "repository": {
         "type": "git",
@@ -32,10 +33,12 @@
         "name": "netpi",
         "email": "hellonewworld@vip.qq.com"
     },
-    "maintainers": [{
-        "name": "netpi",
-        "email": "hellonewworld@vip.qq.com"
-    }],
+    "maintainers": [
+        {
+            "name": "netpi",
+            "email": "hellonewworld@vip.qq.com"
+        }
+    ],
     "dist": {
         "shasum": "28993ad1dbde8b1d83452400b1c77398f18e630e",
         "tarball": "http://registry.npmjs.org/ueditor/-/ueditor-1.0.0.tgz"
